fix: improve text contrast on About screen sections by darkening text colors

--- a/src/sections/About/AboutMissionVision/AboutMissionVision.css
+++ b/src/sections/About/AboutMissionVision/AboutMissionVision.css
@@ -58,7 +58,7 @@
     font-size: 15px;
     line-height: 160%;
     font-weight: 500;
-    color: #555;
+    color: #2c2e33;
 }
 
 /* ---------- VALUES ---------- */
@@ -86,7 +86,7 @@
 .values-list span {
     font-size: 16px;
     font-weight: 500;
-    color: #666;
+    color: #333;
 }
 
 /* ---------- RIGHT IMAGE ---------- */
