--- a/src/sections/About/AboutWhoWeAre/AboutWhoWeAre.css
+++ b/src/sections/About/AboutWhoWeAre/AboutWhoWeAre.css
@@ -46,7 +46,7 @@
     font-size: 22px;
     font-weight: 600;
     line-height: 150%;
-    color: #474B52;
+    color: #1a1a1a;
     margin-bottom: 20px;
 }
 
@@ -54,7 +54,7 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 160%;
-    color: #555;
+    color: #2c2e33;
 }
 
 /* ---------- IMAGE ---------- */
@@ -115,7 +115,7 @@
 .about-who-points p {
     font-size: 14px;
     line-height: 160%;
-    color: #555;
+    color: #2c2e33;
 }
 
 @media (max-width: 1199px) {
